--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- please save translation as utf-8 or utf-16(unicode) -->
-<!-- and send to jozein@sina.com  -->
 <resources>
 
     <!-- add translator name here if you want -->
@@ -513,8 +511,13 @@
     <string name="show_value">Show variable</string>
     <string name="action_adjust">Adjust</string>
     <string name="scroll_speed">Scrolling speed of successive adjust</string>
+    <string name="input_expression">Input expression</string>
     <string name="variable_name_hint">Variable name contains letters, numbers, _ and $, not start with number.</string>
     <string name="variable_expression_hint" formatted="false"><![CDATA[Variable:\n  32 bit signed integer.\nSupported operators:\n  +, -, *, /, %, <<, >>, &, ^, |, ~, ++, --.\n  Same as C/C++/Java…\nExample:\n  (var + 1) % 2]]></string>
+    <string name="action_clipboard">Clipboard</string>
+    <string name="clip_history_size">Clip history size</string>
+    <string name="redo">Redo</string>
+    <string name="undo">Undo</string>
 
 
 </resources>
